working basic templating
